--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   font-family: "Roboto", sans-serif;
   background: #da22ff; /* fallback for old browsers */
@@ -32,4 +32,37 @@ body {
 .container {
   font-size: 4rem;
   color: #f5f6fa;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.timer {
+  font-size: 3.5rem;
+}
+
+.img1 {
+  width: 10rem;
+  height: 10rem;
+
+  background-image: url("./sticker_4.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.img2 {
+  width: 10rem;
+  height: 10rem;
+
+  background-image: url("./giphy_s.gif");
+  background-position: center;
+  background-size: cover;
+}
+
+.icons {
+  width: auto;
+  font-size: 3rem;
 }
