--- a/style.css
+++ b/style.css
@@ -16,17 +16,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   font-family: "Roboto", sans-serif;
-  background: #da22ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #9733ee,
-    #da22ff
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #9733ee,
-    #da22ff
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  transition: all 0.5s;
 }
 
 .container {
