--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ body {
   justify-content: space-around;
   max-width: 380px;
   width: 100%;
+
+  opacity: 0;
+  transition: 1s ease-out;
 }
 
 .box {
@@ -74,47 +77,31 @@ body {
   background-position: center;
   background-size: cover;
 
-  opacity: 0.8;
-
   border-radius: 50%;
 
   box-shadow: 0 0 15px #ccc;
 }
 
+.name-container:hover {
+  opacity: 1;
+}
+
 .n {
   background-image: url("./N.jpeg");
-  opacity: 0;
-  transition: 1s ease-out;
 }
 
 .i {
   background-image: url("./I.jpeg");
-  opacity: 0;
-  transition: 1s ease-out;
 }
 
 .d {
   background-image: url("./D.jpeg");
-  opacity: 0;
-  transition: 1s ease-out;
 }
 
 .h {
   background-image: url("./H.jpeg");
-  opacity: 0;
-  transition: 1s ease-out;
 }
 
 .i {
   background-image: url("./I.jpeg");
-  opacity: 0;
-  transition: 1s ease-out;
-}
-
-.n:hover,
-.i:hover,
-.d:hover,
-.h:hover,
-.i:hover {
-  opacity: 1;
 }
